<resources>
    <string name="app_name">LoginDemo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="unametext_layout">Username</string>
    <string name="ptext_layout">Password</string>
    <string name="yourUname">Enter Your Username..</string>
    <string name="yourPasswd">Enter Your Password..</string>
    <string name="uError">Enter Correct Username..</string>
    <string name="pError">Enter Correct Password..</string>
</resources>
